<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidBugz</string>
    <string name="login_dialog_title">Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>
